# ledger-faucet

./: .gitignore  LICENSE  NOTICE  README.md  canister_ids.json  dfx.json  justfile  mise.toml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release.yml  workflow.yml
scripts/: create-release.sh
src/backend/: Cargo.toml  backend.did
src/backend/src/: assets.rs  lib.rs
src/declarations/faucet/: faucet.did.d.ts  faucet.did.js  index.d.ts  index.js
src/declarations/testicp/: index.d.ts  index.js
src/frontend/: index.html  package-lock.json  package.json
src/frontend/assets/: .ic-assets.json5
src/frontend/assets/.well-known/: ic-domains
src/frontend/src/: App.js  index.scss
tests/: backend.sh  test_icp.sh  test_icrc1.sh
tests/frontend/: icp-faucet.spec.ts  icrc1-faucet.spec.ts  package-lock.json  package.json  playwright.config.ts  test-utils.ts  tsconfig.json
