[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-asset-certification = "3.0.3"
ic-cdk = "0.18.5"
ic-http-certification = "3.0.3"
ic-ledger-types = "0.15.0"
icrc-ledger-types = "0.1.9"
include_dir = "0.7.4"
serde = "1.0.219"
